deploy: 2e373bfc33096886591d80fff90c3150ddd764d5

--- a/development/implementation/models.html
+++ b/development/implementation/models.html
@@ -283,6 +283,7 @@ without advance notice.</p>
 <dd><p>Returns the first of the following user properties that is found to exist:</p>
 <ul class="simple">
 <li><p>Full name</p></li>
+<li><p>Wikimedia username</p></li>
 <li><p>Email address</p></li>
 </ul>
 </dd></dl>
