fixed some files

--- a/video/webapp/index.html
+++ b/video/webapp/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="icon" href="/video/favicon.ico" />
+    <link rel="icon" href="./public/favicon.ico" />
     <title>eventyay</title>
   </head>
   <body>
