--- a/video/webapp/index.html
+++ b/video/webapp/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="icon" href="./public/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <title>eventyay</title>
   </head>
   <body>
