migrated richtext editor to composition api and fixed buntpapier working

--- a/video/webapp/index.html
+++ b/video/webapp/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div id="app"></div>
+  <!-- Teleport target for buntpapier components (dropdowns, tooltips, etc.) -->
+  <div id="bunt-teleport-target"></div>
     <div id="browser-block" style="display: none;">
       <h1>Sorry.</h1>
       <h2>Your browser does not support some of the features we need.</h2>
