--- a/app/eventyay/webapp/index.html
+++ b/app/eventyay/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="icon" href="/favicon.ico" />
     <title>eventyay</title>
   </head>
